Agendar calendar z-index fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,10 @@ main {
   overflow-x: hidden;
 }
 
+main {
+  overflow-x: clip;
+}
+
 ul,
 li {
   display: flex;
